editted json package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Patrickodey360coder.github.io/fireship",
+  "homepage": "http://Patrickodey360coder.github.io/fireship/",
   "name": "react-template",
   "version": "0.1.0",
   "private": true,
